# logdog

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
config/: logdog.yaml  logdog.yaml.example  logwatch.yaml  logwatch.yaml.example
docs/: audit_prompt.md
docs/architecture/: single-ssh-remote-worker-plan.md
docs/prompts/: audit_general.md
logdog/: main.py
logdog/collector/: __init__.py  event_stream.py  host_metrics_probe.py  host_metrics_sampler.py  log_stream.py  metrics.py  reports.py  sampler.py  scheduler.py  storm.py  watch_manager.py
logdog/core/: config.py  docker_connector.py  host_manager.py  metrics_writer.py
logdog/llm/: agent_runtime.py  analyzer.py  permissions.py  provider.py  tool_defs.py  tool_types.py  tools.py
logdog/notify/: base.py  policy.py  render.py  router.py  telegram.py  wechat.py  wecom.py  weixin.py
logdog/pipeline/: filter.py
logdog/remote/: host_adapter.py  ssh_lifecycle.py  worker_backend.py  worker_main.py  worker_pipeline.py  worker_protocol.py  worker_runtime.py
logdog/web/: api.py  chat.py  frontend.py
logwatch/: main.py
logwatch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
logwatch/collector/: event_stream.py  host_metrics_probe.py  host_metrics_sampler.py  log_stream.py  metrics.py  reports.py  sampler.py  scheduler.py  storm.py  watch_manager.py
logwatch/core/: config.py  db.py  docker_connector.py  host_manager.py  metrics_writer.py  retention_scheduler.py
logwatch/llm/: agent_runtime.py  analyzer.py  (+3 more)
tests/: conftest.py  test_smoke_import.py
(+146 files in other folders)
